# pagi-companion

./: .env.example  BACKEND_INTEGRATION_SUMMARY.md  Cargo.toml  Makefile  README.md  docker-compose.yml
backend-go-agent-planner/: go.mod  go.sum  main.go  ws.go
backend-go-model-gateway/: main.go
backend-rust-sandbox/: Cargo.toml
backend-rust-sandbox/src/: main.rs  runner.rs
companion-desktop-frontend/: index.html  package-lock.json  package.json
companion-desktop-frontend/legacy-frontend/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
companion-desktop-frontend/legacy-frontend/components/: DashboardPage.tsx  IntimacyPage.tsx  MatchmakingPage.tsx  MemoriesGalleryPage.tsx  MessageBubble.tsx  PersonalityPage.tsx  ProfilePage.tsx  Sidebar.tsx
companion-desktop-frontend/legacy-frontend/services/: geminiService.ts
companion-desktop-frontend/src/: App.jsx  index.html
companion-desktop-frontend/src/services/: websocket-client.js
companion-desktop-frontend/src/state/: data-schemas.js
docs/: PRODUCTION_READINESS_AUDIT.md
pagi-companion-core/: Cargo.toml
pagi-companion-core/src/: lib.rs
pagi-companion-core/src/brain/: config.rs  mod.rs  tactical_llm.rs
pagi-companion-core/src/companion/: agent.rs  mod.rs  models.rs  psychology.rs
pagi-companion-core/src/companion/kb/: mod.rs
pagi-companion-core/src/rag/: embedding.rs  index.rs  mod.rs
pagi-companion-core/src/security/: cryptography.rs  mod.rs
scripts/: run_all_dev.py
