[package]
name = "pagi-companion-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1.8", features = ["v4", "serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync"] }

chrono = { version = "0.4", features = ["serde"] }

rand_core = { version = "0.6", features = ["getrandom"] }
ed25519-dalek = { version = "2.0", features = ["serde"] }
sha2 = "0.10"
serde_bytes = "0.11"

rand = "0.8"
rayon = "1.8"

# External Tactical LLM interface
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5"

